gcc/testsuite/gdc.test/fail_compilation/fail257.d
pragma(msg, "foo"d == "bar"c ? "A" : "B");
